// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`PromptInput snapshots renders default state 1`] = `
"────────────────────────────────────────
 ❯ Type a message...
────────────────────────────────────────"
`;

exports[`PromptInput snapshots renders disabled state 1`] = `
"────────────────────────────────────────
 ❯ Generating...
────────────────────────────────────────"
`;

exports[`PromptInput snapshots renders default state 2`] = `
"────────────────────────────────────────
 ❯ Type a message...
────────────────────────────────────────"
`;

exports[`PromptInput snapshots renders disabled state 2`] = `
"────────────────────────────────────────
 ❯ Generating...
────────────────────────────────────────"
`;

exports[`PromptInput snapshots renders default state 3`] = `
"────────────────────────────────────────
 ❯ Type a message...
────────────────────────────────────────"
`;

exports[`PromptInput snapshots renders disabled state 3`] = `
"────────────────────────────────────────
 ❯ Generating...
────────────────────────────────────────"
`;
